# hawthorn

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel_test.sqlite  rust-toolchain
config/: log.yaml
docs/: Hawthorn-Dev.postman_environment.json  Hawthorn-Prod.postman_environment.json  Hawthorn.postman_collection.json  README.md
docs/login/: login.md
docs/player/: create_player.md  get_player.md  get_players.md
hooks/: pre-commit
migrations/2018-06-19-025839_create_players/: down.sql  up.sql
migrations/2018-07-02-171712_foreign_keys/: down.sql  up.sql
migrations/2018-07-22-134245_deck_inactive/: down.sql  up.sql
migrations/2018-08-06-211909_create_tokens/: down.sql  up.sql
src/: db.rs  elo.rs  main.rs  models.rs  schema.rs
src/api/: auth.rs  common.rs  deck.rs  elo.rs  error.rs  game.rs  index.rs  login.rs  mod.rs  player.rs
src/models/: common.rs  deck.rs  game.rs  mod.rs  participant.rs  player.rs  ranking.rs  token.rs
