[package]
name = "hawthorn"
version = "0.1.0"
authors = ["Nish Tahir <nish.tahir@willowtreeapps.com>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3.0"
dotenv = "0.13"
time = "0.1"
bcrypt = "0.2"
rand = "0.5.5"
log="0.4.3"
log4rs = "0.8.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.jsonwebtoken]
git = "https://github.com/nishtahir/jsonwebtoken"
rev = "1e5811b"
