[package]
name = "hawthorn"
version = "0.1.0"
authors = ["Nish Tahir <nish.tahir@willowtreeapps.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3.0"
dotenv = "0.13"
time = "0.1"
bcrypt = "0.2"
rand = "0.6.1"
log="0.4.6"
log4rs = "0.8.1"
lazy_static = "1.2.0"
rocket_cors = "0.4.0-rc.2"
jsonwebtoken = "5.0.1"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
